[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "signalguardian"
version = "0.1.0"
description = "Public shell for SignalGuardian (interfaces and stubs only)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
